# XTP

./: .gitignore  .gitmodules  CMakeLists.txt  build_for_mac_arm64.sh  build_for_mac_x86_64.sh  macos_arm.cmake  macos_x86_64.cmake  windows_x86_64.cmake
lib/MoltenVK/: MoltenVK_icd.json
lib/stb_image/: CMakeLists.txt
src/backends/glfw/: CMakeLists.txt  GLFWWindowBackend.cpp  GLFWWindowBackend.h
src/backends/glfw-vulkan/: CMakeLists.txt  GLFWVulkanWindowing.cpp  GLFWVulkanWindowing.h
src/backends/vulkan/: VkFormatParser.cpp  VulkanRenderInfo.cpp  VulkanRenderInfo.h  VulkanWindow.h  XTPVulkan.cpp  XTPVulkan.h
src/core/: CMakeLists.txt  XTP.cpp  XTP.h
src/core/event/: Event.h  Events.cpp  Events.h
src/core/events/: CMakeLists.txt  CleanUpEvent.h  FrameEvent.h  InitEvent.h  KeyPressEvent.h  RenderDebugUIEvent.h  ShaderRegisterEvent.cpp  ShaderRegisterEvent.h
src/core/logging/: SimpleLogger.h
src/core/renderer/: AllocatedImage.h  Camera.cpp  Camera.h  Light.h  Material.h  VkFormatParser.cpp  VkFormatParser.h  VulkanRenderInfo.cpp  VulkanRenderInfo.h  XTPVulkan.cpp  XTPVulkan.h
src/core/renderer/buffer/: AllocatedBuffer.h  BufferManager.h
src/core/renderer/ray/: ScreenPositionRay.h
src/core/renderer/renderable/: MergedMeshRenderable.h  Mesh.h  Renderable.h  SimpleIndexBufferedRenderable.h  SimpleMesh.h  SimpleRenderable.h
src/core/renderer/shader/: ShaderObject.h  SimpleShaderObject.h
src/core/time/: Ticker.cpp  TimeManager.cpp  TimeManager.h
src/core/util/: FileUtil.h
src/core/windowing/: XTPWindowBackend.h  XTPWindowData.h  XTPWindowing.cpp  XTPWindowing.h
src/event/: CMakeLists.txt  Event.h  Events.cpp  Events.h
src/logger/: CMakeLists.txt  LogLevel.h  SimpleLogger.cpp  SimpleLogger.h
src/render-backend/: XTPRenderBackend.h  XTPRenderData.h  XTPRenderInfo.cpp  XTPRenderInfo.h  XTPRendering.cpp  XTPRendering.h
src/time/: CMakeLists.txt  Ticker.h  TimeManager.cpp  TimeManager.h
src/util/: CMakeLists.txt  FileUtil.cpp
src/vulkan/: CMakeLists.txt  VkFormatParser.h  VulkanRenderInfo.cpp  VulkanRenderInfo.h  VulkanWindow.h  XTPVulkan.cpp  XTPVulkan.h
src/vulkan/renderable/: Renderable.cpp  Renderable.h  SimpleIndexBufferedRenderable.cpp  SimpleIndexBufferedRenderable.h  SimpleRenderable.cpp  SimpleRenderable.h
src/vulkan/shader/: ShaderObject.h  SimpleShaderObject.cpp  SimpleShaderObject.h
src/window-backend/: CMakeLists.txt  XTPWindowBackend.h  XTPWindowData.h  XTPWindowing.cpp  XTPWindowing.h
test/: CMakeLists.txt  Options.cpp  Options.h  ShaderCompiler.cmake  TestCamera.cpp  TestCamera.h  TestImGuiRenderer.cpp  TestImGuiRenderer.h  TestMaterial.cpp  TestMaterial.h  TestRenderable.cpp  TestRenderable.h  TestShaderObject.cpp  TestShaderObject.h  TestWindowData.h  XTPTest.cpp  XTPTest.h  xtp_test.cpp
test/assets/shaders/: test.frag  test.vert
